Implements BlackjackCmd